--- a/package.json
+++ b/package.json
@@ -17,7 +17,19 @@
   },
   "homepage": "https://github.com/cf7/folding-papers#readme",
   "dependencies": {
-    "http-server": "^0.10.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.11.1",
+    "babelify": "^8.0.0",
+    "body-parser": "^1.18.2",
+    "browserify": "^14.5.0",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-sortable-tree": "^1.5.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -29,6 +41,8 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
     "nodemon": "^1.11.0",
-    "supertest": "^2.0.1"
+    "supertest": "^2.0.1",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
