--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile": "./node_modules/.bin/webpack -d",
+    "nodemon": "nodemon -e js,json,html,css server.js",
     "test": "test"
   },
   "repository": {
@@ -40,7 +42,7 @@
     "eslint-plugin-react": "^7.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.12.1",
     "supertest": "^2.0.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
