--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
     "body-parser": "^1.18.2",
     "browserify": "^14.5.0",
     "express": "^4.16.2",
+    "express-fileupload": "^0.3.0",
     "fs": "0.0.1-security",
+    "fs-extra": "^4.0.2",
     "html-to-react": "^1.3.1",
     "morgan": "^1.9.0",
     "pdfjs-dist": "^2.0.106",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-dropzone": "^4.2.1",
-    "react-sortable-tree": "^1.5.0"
+    "react-sortable-tree": "^1.5.0",
+    "tmp": "0.0.33"
   },
   "devDependencies": {
     "chai": "^3.5.0",
