--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-dom": "^16.1.0",
     "react-dropzone": "^4.2.1",
     "react-sortable-tree": "^1.5.0",
+    "react-sticky": "^6.0.1",
+    "react-textarea-autosize": "^5.2.1",
     "tmp": "0.0.33"
   },
   "devDependencies": {
