--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "express-fileupload": "^0.3.0",
     "fs": "0.0.1-security",
     "fs-extra": "^4.0.2",
-    "html-to-react": "^1.3.1",
     "morgan": "^1.9.0",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
     "react-dropzone": "^4.2.1",
+    "react-quill": "^1.2.0",
     "react-sortable-tree": "^1.5.0",
     "react-sticky": "^6.0.1",
     "react-textarea-autosize": "^5.2.1",
