--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fs-extra": "^4.0.2",
     "morgan": "^1.9.0",
     "react": "^16.1.1",
+    "react-color": "^2.13.8",
     "react-dom": "^16.1.1",
     "react-dropzone": "^4.2.1",
     "react-quill": "^1.2.0",
