--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-color": "^2.13.8",
     "react-dom": "^16.1.1",
     "react-dropzone": "^4.2.1",
+    "react-native-listener": "^1.0.2",
     "react-quill": "^1.2.0",
     "react-sortable-tree": "^1.5.0",
     "react-sticky": "^6.0.1",
